--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Shows</string>
+    <string name="email_error_message">Invalid Email</string>
 </resources>
