Adjust password and email error text display
Reduce the space between the top illustrations and the login form.
Reset spacing between email and password fields after email error resolution.
Remove top app bar for night display.

When both the email and the password error texts were displayed
the password error text would be covered by the login button. Also when
the email error was resolved, the gap between the password and the email
fields would stay larger as if the error text was still there causing
the same issue.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="login">Login</string>
     <string name="password_error_message">Password must contain at least one digit, lowercase letter, uppercase letter, special character
         and must be at least 6 characters long</string>
+    <string name="top_left_illustration">leftIllustration</string>
 </resources>
