Add Welcome Activity
Add Welcome Activity launch on explicit (and implicit) intent
Add Welcome Activity UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="password_error_message">Password must contain at least one digit, lowercase letter, uppercase letter, special character
         and must be at least 6 characters long</string>
     <string name="top_left_illustration">leftIllustration</string>
+    <string name="top_right_illustration">Top right illustration</string>
+    <string name="play_button">Play button</string>
+    <string name="welcome_text">Welcome, %s!</string>
 </resources>
