Implement shows activity
Remove welcome activity since it is no longer needed, add recycler view
and required logic, add hardcoded shows and auto id generation,
Implement no shows state and switching between the two states

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="top_right_illustration">Top right illustration</string>
     <string name="play_button">Play button</string>
     <string name="welcome_text">Welcome, %s!</string>
+    <string name="shows">Shows</string>
+    <string name="no_shows">No shows</string>
+    <string name="no_shows_message">Your shows are not showing. Get it?</string>
 </resources>
