--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Shows</string>
     <string name="email_error_message">Invalid Email</string>
     <string name="login_activity_name">Login</string>
@@ -14,4 +14,14 @@
     <string name="shows">Shows</string>
     <string name="no_shows">No shows</string>
     <string name="no_shows_message">Your shows are not showing. Get it?</string>
+    <string name="reviews">Reviews</string>
+    <string name="d_reviews_f_average">%d REVIEWS, %.2f AVERAGE</string>
+    <string name="show_image">Show image</string>
+    <string name="show_rating">Show rating</string>
+    <string name="star">Star</string>
+    <string name="profile_picture">Profile picture</string>
+    <string name="write_a_review">Write a review</string>
+    <string name="no_reviews_yet">No reviews yet.</string>
+    <string name="add">ADD</string>
+    <string name="cancel">CANCEL</string>
 </resources>
