--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <string name="app_name">Shows</string>
     <string name="email_error_message">Invalid Email</string>
     <string name="login_activity_name">Login</string>
@@ -24,4 +24,7 @@
     <string name="no_reviews_yet">No reviews yet.</string>
     <string name="add">ADD</string>
     <string name="cancel">CANCEL</string>
+    <string name="get_shows">Get Shows</string>
+    <string name="shows_app">Shows App</string>
+    <string name="add_review_message">"Are you sure you want to add a new review?"</string>
 </resources>
