--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="comment">Comment</string>
     <string name="submit">Submit</string>
     <string name="unknown">Unknown</string>
+    <string name="remember_me">Remember me</string>
 </resources>
