--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,8 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="confirm_logout">Confirm Logout</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
+    <string name="select_method">Select a method</string>
+    <string name="picture_change_instruction">Take a new picture or select an image from the gallery</string>
 </resources>
