--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="repeat_password_text">Repeat password</string>
     <string name="registration_unsuccessful">Registration unsuccessful, please try again.</string>
     <string name="registration_successful">Registration successful</string>
+    <string name="login_unsuccessful_message">Login unsuccessful, please register if you don\'t have an account.</string>
 </resources>
