--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="registration_unsuccessful">Registration unsuccessful, please try again.</string>
     <string name="registration_successful">Registration successful</string>
     <string name="login_unsuccessful_message">Login unsuccessful, please register if you don\'t have an account.</string>
+    <string name="top_rated">Top rated</string>
 </resources>
